--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -286,6 +286,7 @@
           text-transform: uppercase;
       }
 
+
       .navbar-default .navbar-header .navbar-nav a {
           padding: 0;
           vertical-align: middle;
@@ -306,6 +307,15 @@
           font-weight: normal;
           font-size: 1.8rem;
           vertical-align: middle;
+          margin: 14px -15px 13px 15px;
+      }
+
+      c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header:hover {
+          text-decoration: none;
+      }
+
+      c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header img.c-corporate-header {
+          vertical-align: super;
       }
 
       p a {font-weight: bold}
