--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -251,6 +251,7 @@
             background-color: white;
             height: 38px;
             top: 26px;
+            margin-bottom: 16px;
         }
         body.app c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {        
             top: 16px;       
@@ -307,7 +308,7 @@
           font-weight: normal;
           font-size: 1.8rem;
           vertical-align: middle;
-          margin: 14px -15px 13px 15px;
+          margin: 20px -15px 20px 15px;
       }
 
       c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header:hover {
