--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -262,6 +262,14 @@
             height: 37px !important;
         }        
 
+      c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header {
+          margin-bottom: 14px;
+      }
+
+      c-corporate-header a.dealer.c-corporate-header img[src].c-corporate-header:not([src=""]) + span.c-corporate-header {
+          display: none;
+      }
+
         body.header-is-sticky c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
             background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
             background-size: 40px !important;  
@@ -299,6 +307,7 @@
           font-family: 'Scania Sans Condensed';
           font-size: 2rem;
           font-weight: bold;
+          color: #041042;
       }   
 
       c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header {
@@ -310,6 +319,7 @@
           vertical-align: middle;
           margin: 20px -15px 20px 15px;
       }
+
 
       c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header:hover {
           text-decoration: none;
