Fixed font size

--- a/docs/developer/css/scania-bootstrap-docs.css
+++ b/docs/developer/css/scania-bootstrap-docs.css
@@ -598,7 +598,7 @@
   padding: 0;
 }
 .highlight pre code {
-  font-size: inherit;
+  font-size: 1.6rem;
   color: #333;
 }
 .highlight pre .lineno {
