Fixed font size

--- a/docs/template/html-template.html
+++ b/docs/template/html-template.html
@@ -5,254 +5,11 @@
   <meta charset="utf-8">
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
+  <title>UX Library - Sample Page</title>
 
-  <title>UX Library - Typography</title>
-  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
+ <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.4-CF/js/corporate-ui.js"></script>
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
-
-  <style>
-
-
-
-
-  .text-center {
-    text-align: center!important;
-  }
-
-  body.scania.app {font-family: 'Scania Sans Semi Condensed';}
-
-  article.typography h1 {font-size: 28px;}
-
-  c-main-content {background-color: #E2E2E2;}
-
-  
-
-  .table-panel {
-    background-color: white;
-    border: 1px solid;
-    border-collapse: inherit !important;
-  }
-
-  .table thead > tr > th {
-    text-transform: uppercase;
-    font-family: 'Scania Sans Condensed Bold';
-  }  
-
-  .app thead {
-    word-break: normal;
-    text-transform: uppercase;
-    font-family: 'Scania Sans Condensed';
-  }
-
-  .panel {
-    margin-bottom: 30px;
-  }
-
-
-  .panel-default {
-    border-color: #e2e2e2 !important;
-  }
-
-  .panel-body {
-    padding: 30px 30px;
-    min-height: 165px;
-  }
-
-  .panel-heading + .panel-body {
-    padding: 15px;
-  }
-
-  .panel-heading h3 {
-    font-size: 1.7rem;
-    letter-spacing: 0.05rem;
-  }
-
-  .panel .panel-body h3 {
-    font-family: 'Scania Sans Condensed Bold';
-    font-size: 24px;
-    padding-top: 5px;
-    color: #041e42;
-
-  }
-
-  .panel .panel-body h4 {
-    font-family: 'Scania Sans Condensed Bold';
-    color: #4a8ba4;
-    margin-top: 0;
-    margin-bottom: 20px;
-  }
-
-  .panel .panel-body p {
-    font-family: 'Scania Sans Semi Condensed';
-    font-size: 16px;
-  }
-
-  .panel .panel-body .table.table-sm {
-    max-width: 100%;
-    margin: 20px 0;
-  }    
-
-  .panel .panel-body .table.table-sm thead {
-    background-color: transparent;
-    color: #b7b7b7;
-  }
-
-  .panel .panel-body .table.table-sm thead > tr > th {
-    text-transform: none;
-    font-weight: normal;
-    font-family: 'Scania Sans Condensed Bold';
-    padding: 0 10px !important;
-    font-size: 1.3rem;
-    border-bottom: 1px solid #b7b7b7;
-  }
-
-  .panel .panel-body .table.table-sm.table-striped > tbody > tr:nth-child(odd) > td,
-  .panel .panel-body .table.table-sm.table-striped > tbody > tr:nth-child(odd) > th {
-    background-color: #fff;
-  }
-
-  .panel .panel-body .table.table-sm.table-striped > tbody > tr:nth-child(even) > td, .panel .panel-body .table.table-sm.table-striped > tbody > tr:nth-child(even) > th {
-    background-color: #f2f7f9;
-  }    
-
-  .panel .panel-body .table.table-sm tbody > tr > td {
-    font-family: 'Scania Sans Condensed';
-    padding: 5px 10px !important;
-    border: none;
-    font-size: 1.3rem;
-  }
-
-  ul.nav.nav-pills {
-    padding: 0;
-    margin: 0;
-    font-family: 'Scania Sans Semi Condensed Bold';
-  }
-
-  ul.nav.nav-pills li {
-    border: 1px solid #4a8ba4;
-    background-color: #fff;
-  }
-
-  .nav-pills > li > a {
-    border-radius: 0;
-  }
-
-  .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
-    color: #fff;
-    background-color: #4a8ba4;
-  }
-
-  .nav-pills > li > a > .badge {
-    margin-left: 10px;
-    vertical-align: top;
-  }
-
-  ul.nav.nav-pills li + li {
-    margin-left: -1px;
-    margin-bottom: 10px;
-  }
-
-
-
-
-  ul.nav.nav-pills.nav-stacked {
-    font-size: 1.56rem;
-    margin-bottom: 30px;
-  }
-
-  ul.nav.nav-pills.nav-stacked li + li {
-    margin-left: 0;
-    margin-bottom: -1px;
-  }
-
-  ul.nav.nav-pills.nav-stacked > li + li {
-      margin-top: 0;
-      margin-left: 0;
-  }  
-
-  ul.nav.nav-pills.nav-stacked > li > a {
-    padding: 22px;
-    color: #555;
-  }
-
-  ul.nav.nav-pills.nav-stacked > li.active > a {
-    color: #fff;
-  }
-
-ul.nav-tabs {
-    margin: 10px 20px 5px;
-}
-
-ul.nav-tabs > li > a {
-    padding: 10px 20px 9px 20px;
-}
-
-ul.nav-tabs > li > a {
-    font-family: 'Scania Sans Bold';  
-    font-size: 1.4rem;    
-}
-
-  ul.nav-tabs-light > li a {
-    background-color: transparent;
-    color: #041e42;
-    font-family: 'Scania Sans';
-    color: #041e42;  
-    background-color: transparent;
-  }
-
-
-  ul.nav-tabs-light > li.active a,
-  ul.nav-tabs-light > li.active a  {
-    border-color: #d6001c;
-    border-width: 0 0 2px;
-    font-family: 'Scania Sans Bold';
-  }
-
-
-  header.c-page-header {
-    margin-bottom: 30px;
-  }
-
-  header.c-page-header {
-    background: transparent;
-  }
-
-  header.c-page-header .page-header h1,
-  header.c-page-header .page-header h2,
-  header.c-page-header .page-header h3 {
-    font-family: "Scania Sans Headline Bold", Arial, sans-serif !important;
-  }
-  header.c-page-header .page-header h3 {
-    display: inline-block;
-    font-size: 18px !important;
-    display: table-cell;
-    vertical-align: middle;
-    padding-right: 10px;
-  }
-  header.c-page-header .form-control {
-    background-color: #FFF;
-    padding: 15px;
-  }
-  header.c-page-header .page-header h4 {
-    font-family: 'Scania Sans Condensed Bold' !important;
-    font-size: 22px;
-    padding-right: 0;
-    padding-left: 10px;
-    border-left: 1px solid #041e42;
-    display: table-cell;
-    vertical-align: middle;
-  }
-  html body.scania .page-header {
-    border: none;
-    margin-top: 0;
-  }
-
-
-</style>
 
 </head>
 
@@ -274,7 +31,7 @@ ul.nav-tabs > li > a {
             <nav-item location="../developer/scania-bootstrap-app.html">Bootstrap CSS for Applications</nav-item>
             <nav-item location="../developer/scania-bootstrap-public.html">Bootstrap Public CSS</nav-item>  
             <nav-item location="html-template.html" class="active">Cut and Paste HTML</nav-item>
-          </§sub-navigation>  
+          </sub-navigation>  
         </nav-item>
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
@@ -324,28 +81,7 @@ ul.nav-tabs > li > a {
                 <h3 class="panel-title" >Scania Sans Regular in diffent cuts</h3>
               </div>  
               <div class="panel-body">
-                <div class="row">
-                  <div class="col-md-12">
-                    <article class="typography">
 
-                      <h3 style="font-family: 'Scania Sans Condensed'">Let's try a normal sentence using Scania Sans Condensed.</h1>
-                      <h3 style="font-family: 'Scania Sans Semi Condensed'">Let's try a normal sentence using Scania Sans Semi Condensed</h1>
-                      <h1 style="font-family: 'Scania Sans'">Let's try a normal sentence using Scania Sans Regular</h1>
-                      <h3 style="font-family: 'Scania Sans Condensed Bold'">Let's try a normal sentence using Scania Sans Condensed Bold</h1>
-                      <h3 style="font-family: 'Scania Sans Semi Condensed Bold'">Let's try a normal sentence using Scania Sans Semi Condensed Bold</h1>
-                      <h3 style="font-family: 'Scania Sans Bold'">Let's try a normal sentence using Scania Sans Regular Bold</h1>
-
-
-                      <p style="font-family: 'Scania Sans Condensed'" class="mt-5">Let's try a few paragraphs using Scania Sans Condensed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. </p>
-                      <p style="font-family: 'Scania Sans Semi Condensed'">Let's try a few paragraphs using Scania Sans Semi Condensed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. <span class="label label-success label-sm">Improved readability!</span></p>
-                      <p style="font-family: 'Scania Sans'">Let's try a few paragraphs using Scania Sans Regular. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. </p>
-                      <p style="font-family: 'Scania Sans Condensed Bold'">Let's try a few paragraphs using Scania Sans Condensed Bold. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. </p>
-                      <p style="font-family: 'Scania Sans Semi Condensed Bold'">Let's try a few paragraphs using Scania Sans Semi Condensed Bold. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. </p>
-                      <p style="font-family: 'Scania Sans Bold'">Let's try a few paragraphs using Scania Sans Regular Bold. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum. 
-                      </article>                  
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
             <div class="col-md-5">
