--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -20,14 +20,14 @@
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="/corporate-ui/">UX Library</nav-item>
 	<nav-item>
-	    <div class="dropdown">
+	    <span class="dropdown">
 	    <a data-toggle="dropdown" href="#">Jesper Karlsson</a>
 	      <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 	        <li><a href="">Home</a></li>
 	        <li><a href="">Home2</a></li>            
 	        <li><a href="">Home4</a></li>
 	      </ul>
-	    </div>
+	    </span>
 	</nav-item>
   </c-corporate-header>
     
