--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -12,6 +12,12 @@
 
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.4-CF/js/corporate-ui.js?preload=false"></script>
 
+<style>
+  .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+      color: #555;
+      background-color: transparent;
+  }
+</style>
 
 </head>
 
@@ -20,14 +26,14 @@
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="/corporate-ui/">UX Library</nav-item>
 	<nav-item>
-	    <span class="dropdown">
+	    <div class="dropdown">
 	    <a data-toggle="dropdown" href="#">Jesper Karlsson</a>
 	      <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 	        <li><a href="">Home</a></li>
 	        <li><a href="">Home2</a></li>            
 	        <li><a href="">Home4</a></li>
 	      </ul>
-	    </span>
+	    </div>
 	</nav-item>
   </c-corporate-header>
     
