Added Drop Down

--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -27,12 +27,12 @@
     <nav-item location="/corporate-ui/">UX Library</nav-item>
 	<nav-item>
 	    <div class="dropdown">
-	    <a data-toggle="dropdown" href="#">Jesper Karlsson</a>
-	      <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-	        <li><a href="">Home</a></li>
-	        <li><a href="">Home2</a></li>            
-	        <li><a href="">Home4</a></li>
-	      </ul>
+	     <a data-toggle="dropdown" href="#">Jesper Karlsson</a>
+  	      <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+  	        <li><a href="">Home</a></li>
+  	        <li><a href="">Home2</a></li>            
+  	        <li><a href="">Home4</a></li>
+  	      </ul>
 	    </div>
 	</nav-item>
   </c-corporate-header>
@@ -41,6 +41,24 @@
     <c-main-navigation ng-cloak>
       <primary-items>
         <nav-item ng-repeat="item in thissite.items" location="{{item.url}}" nav-item="item" active="{{item.active}}" ng-click="thissite.changeView($event, item)"></nav-item>
+        <nav-item location="/corporate-ui-docs/styleguide/" class="active">Sub menu
+          <sub-navigation caption="Style Guide">
+            <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
+            <nav-item location="/corporate-ui-docs/icons/">Icons</nav-item>
+            <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
+            <nav-item>
+              <div class="dropdown">
+              <a data-toggle="dropdown" href="#">Dropdown</a>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                  <li><a href="">Home</a></li>
+                  <li><a href="">Home2</a></li>            
+                  <li><a href="">Home4</a></li>
+                </ul>
+              </div>
+        </nav-item>   
+          </sub-navigation>
+          </nav-item>            
+          <nav-item locat
       </primary-items>
       <secondary-items>
           <nav-item>
