--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -25,7 +25,7 @@
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="/corporate-ui/">UX Library</nav-item>
-	<nav-item>
+	<nav-item><a href="">
 	    <div class="dropdown">
 	     <a data-toggle="dropdown" href="#">Jesper Karlsson</a>
   	      <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -34,6 +34,7 @@
   	        <li><a href="">Home4</a></li>
   	      </ul>
 	    </div>
+    </a>
 	</nav-item>
   </c-corporate-header>
     
