--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -63,7 +63,7 @@
     <c-main-navigation ng-cloak>
       <primary-items>
         <nav-item ng-repeat="item in thissite.items" location="{{item.url}}" nav-item="item" active="{{item.active}}" ng-click="thissite.changeView($event, item)"></nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/" class="active">Sub menu
+        <nav-item location="#" class="active">Sub menu
             <sub-navigation caption="Style Guide">
               <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
               <nav-item location="/corporate-ui-docs/icons/">Icons</nav-item>
