Sub navigation links

--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -18,10 +18,10 @@
       background-color: transparent;
   }
 
-  sub-navigation nav-item a:hover:after {
+  sub-navigation nav-item ul.dropdown-menu a:after {
     border-bottom: none;
   }
-
+  
 </style>
 
   <script>
