--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -13,15 +13,15 @@
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.4-CF/js/corporate-ui.js?preload=false"></script>
 
 <style>
-  .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-      color: #555;
-      background-color: transparent;
-  }
 
   sub-navigation nav-item ul.dropdown-menu a:after {
     border-bottom: none;
   }
-  
+
+  a:focus {
+    outline: 0;
+  }
+
 </style>
 
   <script>
