Active on SubMenu

--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -69,7 +69,7 @@
           </nav-item>  
       </primary-items>
       <secondary-items>
-          <nav-item>
+          <nav-item class="active">
             <div class="dropdown">
             <a data-toggle="dropdown" href="#">Dropdown 1</a>
               <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
