--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -18,6 +18,12 @@
     border-bottom: none;
   }
 
+  sub-navigation nav-item ul.dropdown-menu  {
+    background-color: #f5f5f5;
+  }
+
+      
+
   a:focus {
     outline: 0;
   }
