--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -14,6 +14,12 @@
 
 <style>
 
+  .navbar-default .dropdown-menu {
+    -webkit-box-shadow: 0 9px 12px rgba(0, 0, 0, .175);
+    box-shadow: 0 9px 12px rgba(0, 0, 0, .175);
+    overflow-y: auto;
+  }
+  
   sub-navigation nav-item ul.dropdown-menu a:after {
     border-bottom: none;
   }
@@ -21,6 +27,8 @@
   sub-navigation nav-item ul.dropdown-menu  {
     background-color: #f5f5f5;
   }
+
+
 
       
 
