--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -10,7 +10,7 @@
 
     <title>Corporate UI - Dealer Header Code Generator</title>
 
-    <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.2.0-CF/js/corporate-ui.js"></script>
+    <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.4-CF/js/corporate-ui.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">     
 
     <style>
@@ -131,7 +131,7 @@
   &lt;title&gt;Name of your page&lt;/title&gt;
   &lt;script src=&quot;https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js&quot;&gt;&lt;/script&gt;
   
-  &lt;script src=&quot;https://d31jnweo1ynb8u.cloudfront.net/build/global/3.2.0-CF/js/corporate-ui.js&quot;&gt;&lt;/script&gt;
+  &lt;script src=&quot;https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.4-CF/js/corporate-ui.js&quot;&gt;&lt;/script&gt;
 
 &lt;/head&gt;
 
@@ -353,7 +353,7 @@
 
         c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header {
             width: 41px;
-        } 
+        }   
 
       }
 
@@ -364,6 +364,7 @@
     <link rel="stylesheet"
         href="https://highlightjs.org/static/demo/styles/github.css">        
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    <script src="//static.scania.com/cds/cds-site/js/bs-docs.js"></script>    
 
   </body>
 </html>
