--- a/docs/component/examples/stenciljs-buttons-demo.html
+++ b/docs/component/examples/stenciljs-buttons-demo.html
@@ -5,12 +5,13 @@
 </head>
 <body>
 	
-
+<div style="margin: 10% 20%">
+  <h1>Hey Legend!</h1>
   <codext-gradient-button color="darkblue">Gradient Button - Darkblue</codext-gradient-button>
   <codext-gradient-button color="green">Gradient Button - Green</codext-gradient-button>
   <codext-gradient-button color="pink">Gradient Button - Pink</codext-gradient-button>
   <codext-gradient-button color="blue">Gradient Button - Blue</codext-gradient-button>
+</div>
 
-  	
 </body>
 </html>
