--- a/docs/component/examples/article.html
+++ b/docs/component/examples/article.html
@@ -68,8 +68,8 @@
           <h3>Strong skills in Bootstrap</h3>
           <p>Since we will not be able to standardize each and every tailored component made at Scania IT, you'll need to develop you core UX within your project. Since we’re using the Bootstrap Grid within our components, you'll highly benefit from using it in your custom development as well. Here's a few good starting points:</p>
           <ul>
-            <li>An introduction to Boostrap (YouTube videos)</li>
-            <li>Extending Boostrap with Corporate UI (Scania Boostrap)</li>
+            <li>An introduction to Bootstrap (YouTube videos)</li>
+            <li>Extending Bootstrap with Corporate UI (Scania Bootstrap)</li>
           </ul>
 
 
