--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -122,7 +122,18 @@
 
   </c-main-content>
 
-  <c-corporate-footer></c-corporate-footer>
+  <c-corporate-footer>
+    <c-social-media>
+     <nav-item location="#" icon="facebook"></nav-item>
+     <nav-item location="#" icon="twitter"></nav-item>
+     <nav-item location="#" icon="youtube"></nav-item>
+     <nav-item location="#" icon="linkedin"></nav-item>
+   </c-social-media>
+
+    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+    <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+    
+  </c-corporate-footer>
 
   <script src="https://static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
 
