--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -1,3 +1,16 @@
+.app .btn-link.btn-info {
+    font-weight: normal;
+}
+
+.app .btn {
+    font-family: "Scania Sans Semi Condensed";
+    padding: 10px 18px;
+    text-transform: none;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+
 
 /* Coming in > 3.2.0  */
 .btn + .btn {
