--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -122,18 +122,22 @@
 
   </c-main-content>
 
-  <c-corporate-footer>
-    <c-social-media>
-     <nav-item location="#" icon="facebook"></nav-item>
-     <nav-item location="#" icon="twitter"></nav-item>
-     <nav-item location="#" icon="youtube"></nav-item>
-     <nav-item location="#" icon="linkedin"></nav-item>
-   </c-social-media>
+  <link rel="import" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.2.1-CF/components/social-media/social-media.html">
+  
+    <c-corporate-footer>
+      <c-social-media>
+       <nav-item icon="facebook">
+         <a target="_blank" href="https://www.facebook.com/scaniagroup/"></a>
+       </nav-item>
+       <nav-item location="#" icon="twitter"></nav-item>
+       <nav-item location="#" icon="youtube"></nav-item>
+       <nav-item location="#" icon="linkedin"></nav-item>
+     </c-social-media>
 
-    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
-    <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
-    
-  </c-corporate-footer>
+      <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+      <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+
+    </c-corporate-footer>
 
   <script src="https://static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
 
