Added Facebook Link Blank Window

--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -122,12 +122,12 @@
 
   </c-main-content>
 
+
   <link rel="import" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.2.1-CF/components/social-media/social-media.html">
-  
+
     <c-corporate-footer>
       <c-social-media>
-       <nav-item icon="facebook">
-         <a target="_blank" href="https://www.facebook.com/scaniagroup/"></a>
+       <nav-item icon="facebook" onclick=window.open("https://www.facebook.com/scaniagroup/")> 
        </nav-item>
        <nav-item location="#" icon="twitter"></nav-item>
        <nav-item location="#" icon="youtube"></nav-item>
