--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -38,7 +38,7 @@
 
 </style>
 
-  <script>
+<!--   <script>
     setTimeout(function(){
         var items = document.querySelectorAll('nav-item');
 
@@ -51,7 +51,7 @@
             }
         }
     }, 300);
-  </script>
+  </script> -->
 
 
 </head>
@@ -127,8 +127,7 @@
 
     <c-corporate-footer>
       <c-social-media>
-       <nav-item icon="facebook" onclick=window.open("https://www.facebook.com/scaniagroup/")> 
-       </nav-item>
+       <nav-item icon="facebook" onclick=window.open("https://www.facebook.com/scaniagroup/")></nav-item>
        <nav-item location="#" icon="twitter"></nav-item>
        <nav-item location="#" icon="youtube"></nav-item>
        <nav-item location="#" icon="linkedin"></nav-item>
