--- a/docs/master-branch/component/examples/Bootstrap/table.html
+++ b/docs/master-branch/component/examples/Bootstrap/table.html
@@ -35,7 +35,7 @@
   </script>
 
 </head>
-<body class="scania app">
+<body class="scania app ux-lib" data-env="Test">
   <c-corporate-header>
     <nav-item location="#">table</nav-item>
   </c-corporate-header>
