--- a/docs/master-branch/component/examples/advanced-tables.html
+++ b/docs/master-branch/component/examples/advanced-tables.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body class="scania ux-lib" data-env="dev" ng-controller="UxLib as uxlib">
+<body class="scania ux-lib" data-env="Test" ng-controller="UxLib as uxlib">
 
   <c-corporate-header site-name="Developers" site-url="/">
     <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
