--- a/docs/master-branch/component/examples/angular-navigation3.html
+++ b/docs/master-branch/component/examples/angular-navigation3.html
@@ -55,7 +55,7 @@
     </c-main-navigation>
   </script>
 </head>
-<body class="scania" ng-controller="Example as example" ng-cloak>
+<body class="scania ux-lib" data-env="Test" ng-controller="Example as example" ng-cloak>
 
   <c-corporate-header site-name="{{example.name}}" short-name="{{example.short}}" site-url="/">
     <nav-item location="/">Global</nav-item>
