--- a/docs/master-branch/component/examples/login.html
+++ b/docs/master-branch/component/examples/login.html
@@ -48,7 +48,7 @@
 
   <link rel="import" href="../../../html/component/Tables + Forms/login/login.html">
 </head>
-<body class="scania">
+<body class="scania ux-lib" data-env="Test">
 
   <c-login headline="Welcome to Scania" description="To log in to the resource you requested, please select your account type and submit your username and password in the form.">
     <form-field type="text" name="username" label="Username"></form-field>
