--- a/docs/master-branch/component/inline-editor/inline-editor.html
+++ b/docs/master-branch/component/inline-editor/inline-editor.html
@@ -79,7 +79,7 @@
   	<link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 
 </head>
-<body class="scania">
+<body class="scania ux-lib" data-env="Test">
 
 
 	<c-corporate-header site-name="Edit document" site-url="/corporate-ui-docs/">
