--- a/docs/master-branch/template/Angular5/src/index.html
+++ b/docs/master-branch/template/Angular5/src/index.html
@@ -8,6 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js?preload=false"></script>
 </head>
-<body class="scania app" id="app-root">
+<body class="scania app ux-lib" data-env="Test" id="app-root">
 </body>
 </html>
