--- a/docs/master-branch/template/advanced-tables/responsive-cards/example-widget-reflow1.html
+++ b/docs/master-branch/template/advanced-tables/responsive-cards/example-widget-reflow1.html
@@ -92,7 +92,7 @@
 
 });</script>
 </head>
-<body class="scania app">
+<body class="scania app ux-lib" data-env="Test">
 
 <table id="table1" class="table table-striped">
 	<thead>
