--- a/docs/master-branch/template/advanced-tables/responsive-cards/example-widget-reflow2.html
+++ b/docs/master-branch/template/advanced-tables/responsive-cards/example-widget-reflow2.html
@@ -214,7 +214,7 @@
 
 });</script>
 </head>
-<body class="scania app">
+<body class="scania app ux-lib" data-env="Test">
 
 <!-- This selector markup is completely customizable -->
 <div class="columnSelectorWrapper">
