--- a/docs/master-branch/template/advanced-tables/responsive-cards/table-reflow-widget.html
+++ b/docs/master-branch/template/advanced-tables/responsive-cards/table-reflow-widget.html
@@ -236,7 +236,7 @@
 	});
 	</script>
 </head>
-<body class="scania app">
+<body class="scania app ux-lib" data-env="Test">
 
 <div id="banner">
 	<h1>table<em>sorter</em></h1>
