--- a/docs/master-branch/template/basic-template.html
+++ b/docs/master-branch/template/basic-template.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body class="scania">
+<body class="scania ux-lib" data-env="Test">
 
 	<c-corporate-header site-name="My New Application" site-url="/corporate-ui-docs/">
 		<nav-item location="https://www.scania.com">Sample Link</nav-item>
