--- a/docs/master-branch/template/corporate-ui-basic-template.html
+++ b/docs/master-branch/template/corporate-ui-basic-template.html
@@ -39,7 +39,7 @@
   </script>
 
 </head>
-<body class="scania app">
+<body class="scania app ux-lib" data-env="Test">
     
   <c-corporate-header site-name="Application Name">
     <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
