--- a/docs/master-branch/template/light-examples.html
+++ b/docs/master-branch/template/light-examples.html
@@ -26,7 +26,7 @@
   </style>
     
 </head>
-<body class="scania ux-lib app" data-env="dev">
+<body class="scania ux-lib app" data-env="Test">
 
   <c-corporate-header site-name="Fleet Management" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
