--- a/docs/master-branch/component/component.html
+++ b/docs/master-branch/component/component.html
@@ -86,7 +86,7 @@
     </style>  
 
   </head>
-  <body class="scania app ux-lib">
+  <body class="scania app ux-lib" data-env="Test">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
