--- a/docs/master-branch/component/examples/angular-navigation.html
+++ b/docs/master-branch/component/examples/angular-navigation.html
@@ -18,7 +18,7 @@
   
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 </head>
-<body class="scania" ng-controller="UxLib as uxlib">
+<body class="scania ux-lib" data-env="Test" ng-controller="UxLib as uxlib">
 
   <c-corporate-header site-name="Developers" site-url="/">
     <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
