--- a/docs/master-branch/component/examples/angular-navigation2.html
+++ b/docs/master-branch/component/examples/angular-navigation2.html
@@ -23,7 +23,7 @@
   
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 </head>
-<body class="scania" ng-controller="Example as example" ng-cloak>
+<body class="scania ux-lib" data-env="Test" ng-controller="Example as example" ng-cloak>
 
   <c-corporate-header site-name="{{example.name}}" site-url="/">
     <nav-item location="/">Global</nav-item>
