--- a/docs/master-branch/component/examples/c-dashboard.html
+++ b/docs/master-branch/component/examples/c-dashboard.html
@@ -14,7 +14,7 @@
 
   <link rel="import" href="../../../html/component/Listing Components/dashboard/dashboard.html">
 </head>
-<body class="scania ux-lib" data-env="dev">
+<body class="scania ux-lib" data-env="Test">
 
   <c-corporate-header site-name="UX Library" site-url="/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
