--- a/docs/master-branch/component/examples/data-interaction.html
+++ b/docs/master-branch/component/examples/data-interaction.html
@@ -78,7 +78,7 @@
   <link rel="import" href="data-interaction/react-component.html">
   <link rel="import" href="data-interaction/angular-component.html">
 </head>
-<body class="scania app">
+<body class="scania app ux-lib" data-env="Test">
 
   <c-corporate-header site-name="UX Library" site-url="/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
