--- a/docs/master-branch/component/examples/dealer.html
+++ b/docs/master-branch/component/examples/dealer.html
@@ -24,7 +24,7 @@
 
 
 
-  <body class="scania" ng-controller="Example as example">
+  <body class="scania ux-lib" data-env="Test" ng-controller="Example as example">
 
     <c-corporate-header site-name="{{example.siteName}}" short-name="{{example.mobileName}}" site-url="{{example.dealerUrl}}" ng-attr-dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" ng-attr-dealer-url="{{example.dealerUrl}}">
       <nav-item ng-attr-location="{{example.topLinkHref}}" ng-bind="example.topLinkName"></nav-item>
