--- a/docs/master-branch/component/examples/index.html
+++ b/docs/master-branch/component/examples/index.html
@@ -19,7 +19,7 @@
 
   <link rel="stylesheet" href="/css/ux-library.css">
 </head>
-<body class="scania ux-lib" data-env="dev" ng-controller="UxLib as uxlib">
+<body class="scania ux-lib" data-env="Test" ng-controller="UxLib as uxlib">
 
   <c-corporate-header site-name="Developers" site-url="/">
     <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
