--- a/docs/master-branch/component/examples/light-dashboard.html
+++ b/docs/master-branch/component/examples/light-dashboard.html
@@ -14,7 +14,7 @@
   <script src="../../../js/corporate-ui.js"></script>
 
 </head>
-<body class="scania ux-lib app" data-env="dev">
+<body class="scania ux-lib app" data-env="Test">
 
   <c-corporate-header site-name="UX Library" site-url="/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
