--- a/docs/master-branch/component/examples/sidenav.html
+++ b/docs/master-branch/component/examples/sidenav.html
@@ -47,7 +47,7 @@
     }
   </style>
 </head>
-<body class="scania ux-lib app" data-env="dev" ng-app="App">
+<body class="scania ux-lib app" data-env="Test" ng-app="App">
   <c-corporate-header site-name="UX Library" site-url="/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
