--- a/docs/master-branch/component/testing/testing-advanced-tables.html
+++ b/docs/master-branch/component/testing/testing-advanced-tables.html
@@ -40,7 +40,7 @@
 
 </head>
 
-<body class="scania ux-lib" data-env="dev">
+<body class="scania ux-lib" data-env="Test">
 
   <c-corporate-header site-name="Developers" site-url="/">
     <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
