--- a/docs/master-branch/template/advanced-tables/responsive-cards/table-responsive-cards.html
+++ b/docs/master-branch/template/advanced-tables/responsive-cards/table-responsive-cards.html
@@ -109,7 +109,7 @@
 
 });</script>
 </head>
-<body class="scania app" data-env="proto">
+<body class="scania app ux-lib" data-env="Test" data-env="proto">
 	<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
 		<nav-item location="https://www.scania.com">Sample Link</nav-item>
 	</c-corporate-header>
