--- a/docs/master-branch/template/advanced-tables/table-basic-template.html
+++ b/docs/master-branch/template/advanced-tables/table-basic-template.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="scania app" data-env="proto">
+<body class="scania app ux-lib" data-env="Test" data-env="proto">
 
 <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
