--- a/docs/master-branch/template/advanced-tables/table-pagination.html
+++ b/docs/master-branch/template/advanced-tables/table-pagination.html
@@ -54,7 +54,7 @@
 
   <link rel="stylesheet" href="/ux-library/ux-lib.css">
 </head>
-<body class="scania app" data-env="proto">
+<body class="scania app ux-lib" data-env="Test" data-env="proto">
 
 <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
