--- a/docs/master-branch/template/advanced-tables/table-tree-view.html
+++ b/docs/master-branch/template/advanced-tables/table-tree-view.html
@@ -22,7 +22,7 @@
 
   <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 </head>
-<body class="scania" data-env="proto">
+<body class="scania ux-lib" data-env="Test" data-env="proto">
 
 <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
