--- a/docs/master-branch/template/angular-basic-template.html
+++ b/docs/master-branch/template/angular-basic-template.html
@@ -56,7 +56,7 @@
 
 </head>
 
-<body class="scania app" ng-controller="ThisSite as thissite">
+<body class="scania app ux-lib" data-env="Test" ng-controller="ThisSite as thissite">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="/corporate-ui/">UX Library</nav-item>
