--- a/docs/master-branch/template/html-copy-paste/html-copy-paste-components.html
+++ b/docs/master-branch/template/html-copy-paste/html-copy-paste-components.html
@@ -18,7 +18,7 @@
 </head>
 
 
-<body class="scania">
+<body class="scania ux-lib" data-env="Test">
 
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
