--- a/docs/master-branch/template/html-copy-paste/html-copy-paste.html
+++ b/docs/master-branch/template/html-copy-paste/html-copy-paste.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body class="scania">
+<body class="scania ux-lib" data-env="Test">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
